# JobifyAS

./: .travis.yml  README.md
AppServer/: .gitignore  CMakeLists.txt  cookies.txt  prueba.sh  registerUser.sh  users.json
AppServer/src/: JobifyController.cpp  JobifyController.h  main.cpp
